Update README to show Linux support is now working

--- a/README
+++ b/README
@@ -21,8 +21,8 @@ http://imgur.com/uV6dr7y
 C++ version written by gh2k, and your generous tips can be sent to
 1gh2k13JzLTxDz2vmo8RH7HcjTLLg5kdc ;-)
 
-The .sln is for Visual Studio 2012. The Makefile is for Linux (not yet
-working!) -- Not tested on osx.
+The .sln is for Visual Studio 2012. The Makefile is for Linux.
+Not tested on osx.
 
 A Windows binary build is here:
 https://dl.dropboxusercontent.com/u/85325596/rpoints/rpoints.zip
@@ -35,9 +35,6 @@ It only works on 64-bit Windows, and needs the x64 redist from:
 http://www.microsoft.com/en-gb/download/details.aspx?id=30679
 
 To build on Linux: 
-THE LINUX BUILD DOES NOT YET WORK.
-It appears to be doing the right thing, processing the same number of keys/sec
-as my Windows build, but it never finds a valid result.
 (only tested on ubuntu 12.04+ x64)
 
 obviously:
